--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 </section>
 
 <section id="about-app" class="section-p1">
-<h2>Download Our <a href="#" class="">App</a></h2>
+<h2>Download Our <a href="#" class="videoApp">App</a></h2>
 <div>
   <video autoplay muted loop src="/img/about/1.mp4"></video>
 </div>
