--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
       <div>
         <img src="/img/people/1.png" alt="">
         <p>
-          <span> John Doe</span> <br> Senior DevOps Enigneer
+          <span>Fred</span> <br> Senior DevOps Enigneer
           <br>
           Phone: 098767676746 <br>
           E-mail: wsdfsadgd@gmail.coc
@@ -95,7 +95,7 @@
       <div>
         <img src="/img/people/2.png" alt="">
         <p>
-          <span> John Doe</span> <br> Senior DevOps Enigneer
+          <span>Timothy</span> <br> Senior DevOps Enigneer
           <br>
           Phone: 098767676746 <br>
           E-mail: wsdfsadgd@gmail.coc
@@ -104,7 +104,7 @@
       <div>
         <img src="/img/people/3.png" alt="">
         <p>
-          <span> John Doe</span> <br> Senior DevOps Enigneer
+          <span>John</span> <br> Senior DevOps Enigneer
           <br>
           Phone: 098767676746 <br>
           E-mail: wsdfsadgd@gmail.coc
